--- a/apollo-server-v1/package.json
+++ b/apollo-server-v1/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -r esm index.js"
   },
   "keywords": [],
   "author": "oscar",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.19.0",
     "apollo-server-express": "^1.4.0",
     "body-parser": "^1.19.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.1"
+    "graphql-tools": "^7.0.1",
+    "graphql-type-json": "^0.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
